# artist-recommendations

./: README.md
client/: README.md  next.config.mjs  package-lock.json  package.json
client/app/: globals.css  layout.js  page.js
client/app/recommendations/[artist]/: page.js
server/: app.py  pyproject.toml
